test-nginx/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  nginx
  namespace: nginx1-test
spec:
  selector:
    app:  nginx1
  type:  ClusterIP
  ports:
    - name:  http
      port:  80
