test-nginx/nginx-ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx1-test-http
  namespace: nginx1-test
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: nginx1-test-redirectscheme@kubernetescrd
spec:
  rules:
  - host: "test1.tschumi.me"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx1-test
            port:
              number: 80
